yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rick-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rick-api
  template:
    metadata:
      labels:
        app: rick-api
    spec:
      containers:
      - name: rick-api
        image: your-dockerhub-user/rick-api:latest  # תעדכן לשם שלך
        ports:
        - containerPort: 5000
