yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-api-service
spec:
  selector:
    app: rick-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
